# petrocastm

./: .gitignore  LICENSE  README.md  config.toml  config.yaml  input.rst  pyproject.toml  requirements.txt  setup.py
PetroCast/: __main__.py  main.py  run.py  visualization.py
PetroCast/models/: laherrere_model.py
PetroCast/utils/: calculate_future_prod.py  cumulative_production.py  curve_fitting.py  data_processing.py  determine_input.py
data/output/: Oil_estimate.py
data/processed/: Fix_endowments_two.py  Oil_endowments_estimates.py  Oil_endowments_estimates_four.py  Oil_endowments_estimates_three.py  Oil_endowments_estimates_two.py  Oil_estimate.csv  Oil_estimate.json  Oil_estimate_sorted.csv  fix_endowments.py
data/raw/: Check file.py  copper_data_clean.csv  csv_estimate.csv  data2_oil_his_BP.csv  sorted_oil_endowments_with_estimations.csv
examples/: config.toml  test.py
examples/raw/: data1_oil_his_havard.csv
petrocast/: __main__.py  run.py  visualization.py
petrocast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
petrocast/models/: hubbert_curve_model.py
petrocast/utils/: curve_fitting.py  data_processing.py
scripts/: New_model.py  Python PDF.py  curve_fitting.py  data_load.py  data_processing.py  test_hubbert_curve.py
tests/: test_calculate_cumulative_production.py  test_curve_fitting.py  test_data_processing.py  test_hubbert_curve.py  test_laherrere_model.py  test_visualization.py
