
[tool.poetry]
name = "petrocast"
version = "0.1.0"
description = ""
authors = ["ole"]
readme = "README.md"
packages = [{include = "PetroCast"}]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "3.9.3"
numpy = "2.1.3"
pandas = "2.2.3"
scipy = "1.14.1"
pylint= "3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
