[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petrocast"
version = "0.1.0"
description = "A Python package for modeling resource extraction using the Hubbert and Laherrère models."
authors = [{ name = "Ole Van Allen", email = "ole.allen@inn.no" }]
license = { file = "MIT LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "pyyaml",  # Remove if switching to toml
    "tomli" # Only needed for Python <3.11
]

[project.scripts]
petrocast = "PetroCast.__main__:main"

[tool.setuptools]
packages = ["PetroCast", "PetroCast.utils", "PetroCast.models"]

